--- a/common_object/confs/dtu_fixed_cameras.conf
+++ b/common_object/confs/dtu_fixed_cameras.conf
@@ -1,5 +1,5 @@
 train{
-    expname = dtu_idr
+    expname = dtu_neuface
     dataset_class = datasets.scene_dataset.SceneDataset
     model_class = model.implicit_differentiable_renderer.IDRNetwork
     loss_class = model.loss.IDRLoss
@@ -8,7 +8,7 @@ train{
     plot_freq = 100
     alpha_milestones = [250,500,750,1000,1250]
     alpha_factor = 2
-    sched_milestones = [1000,1500]
+    sched_milestones = [1000, 1500]
     sched_factor = 0.5
 }
 plot{
